[gd_scene load_steps=4 format=3 uid="uid://cum3uhbgu6q8j"]

[ext_resource type="Texture2D" uid="uid://5p1hhu66drwm" path="res://assets/sprites/dialog_sprites/Dialogue-Background.png" id="1"]
[ext_resource type="FontFile" uid="uid://dh1rgegq0qcel" path="res://assets/fonts/DefaultFont.tres" id="2"]
[ext_resource type="Script" path="res://scenes/ui/dialog_player.gd" id="3"]

[node name="DialogPlayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 162.0
offset_right = 5.0
offset_bottom = 192.0
grow_horizontal = 2
scale = Vector2(2, 2)
texture = ExtResource("1")

[node name="TextLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 167.0
offset_right = 77.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0784314, 0.0627451, 0.0745098, 1)
theme_override_fonts/font = ExtResource("2")
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.23

[node name="ChoiceContainer" type="VBoxContainer" parent="."]
offset_left = 131.0
offset_top = 169.0
offset_right = 171.0
offset_bottom = 209.0

[node name="Choice1" type="Button" parent="ChoiceContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Choice2")
focus_neighbor_bottom = NodePath("../Choice2")

[node name="Choice2" type="Button" parent="ChoiceContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Choice1")
focus_neighbor_bottom = NodePath("../Choice1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ChoiceContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="ChoiceContainer/Choice2" to="." method="_on_choice_2_pressed"]
